--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 			href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
@@ -153,9 +157,27 @@
 					<div class="sidebar-items item-social">
 						<h4 class="social-main-header">Don't miss a thing!</h4>
 						<ul class="social-list">
-							<a href="#"><li class="social-items">Face</li></a>
-							<a href="#"><li class="social-items">Twit</li></a>
-							<a href="#"><li class="social-items">Insta</li></a>
+							<a href="#"
+								><li class="social-items">
+									<div class="circle">
+										<i class="fa fa-facebook" aria-hidden="true"></i>
+									</div>
+								</li>
+							</a>
+							<a href="#">
+								<li class="social-items">
+									<div class="circle">
+										<i class="fa fa-twitter" aria-hidden="true"></i>
+									</div>
+								</li>
+							</a>
+							<a href="#">
+								<li class="social-items">
+									<div class="circle">
+										<i class="fa fa-instagram" aria-hidden="true"></i>
+									</div>
+								</li>
+							</a>
 						</ul>
 					</div>
 					<div class="sidebar-items item-category">
